linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: linkding
  name: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  strategy: {}
  template:
    metadata:
      labels:
        app: linkding
    spec:
      containers:
        - image: ghcr.io/sissbruecker/linkding:latest
          name: linkding
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /etc/linkding/data
              name: linkding-data
      volumes:
        - name: linkding-data
          persistentVolumeClaim:
            claimName: linkding-data
