linkding/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"linkding"},"name":"linkding","namespace":"linkding"},"spec":{"ports":[{"port":9090,"protocol":"TCP","targetPort":9090}],"selector":{"app":"linkding"},"type":"LoadBalancer"}}
  creationTimestamp: "2026-09-16T17:58:51Z"
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    app: linkding
  name: linkding
  namespace: linkding
  resourceVersion: "71507"
  uid: 27e2b939-d8b8-4723-9fcb-2d73d61c7695
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.43.240.11
  clusterIPs:
  - 10.43.240.11
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 30935
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: linkding
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 192.168.64.3
      ipMode: VIP
